# ESA-microbial

./: gitattributes.txt  gitignore.txt  pyproject.toml  readme.md  train.py
configs/: default_config.py
docs/: extract.py
docs/examples/: embedding_space.ipynb
evaluate/: README.md  alignment_metrics.py  baseline.ipynb  helpers.py  inference_model_helpers.py  inference_models.py  pinecone_store.py  stage_upstream.py  test_accuracy_fast.py  test_alignment.ipynb  test_custom_generalization_accuracy.py  test_custom_generalization_permute.py  test_permute_fast.py  test_permutes.ipynb  upsert.py
evaluate/aligners/: bowtie2.py  bwamem2.py  minimap2.py  smith_waterman.py
evaluate/configs/: data_recipes.yaml  model_checkpoints.yaml  raw.yaml
evaluate/data/chromosome_2/: ch2_genes.csv
evaluate/others/: StrobeAlign.ipynb  bound.py  evaluate_bound.ipynb  multi-store_accuracy.py  multi-store_permute.py  test_acc.ipynb  test_accuracy.py  test_clustering.py  test_permute.py
src/XXXX_2/: __main__.py  config_schema.py  dataset.py  main.py  model.py  similarity.py  simulate.py  tokenizer.py  trainer.py  utils.py
src/XXXX_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model/tokenizers/: dna_tokenizer_10_no_padding.json  dna_tokenizer_10k.json  dna_tokenizer_20_no_padding.json
test/: test_dataset.py  test_main.py  test_model.py  test_simulate.py  test_utils.py
test/data/: sample_simulated_reads.aln  sample_simulated_reads.fq  sample_simulated_reads.sam
